# my_game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  install_dependencies.sh
application/: CMakeLists.txt  main.cpp
back_src/: BoxHead.cpp
back_src/global/: Output.hpp  Settings.hpp
back_src/modules/: CMakeLists.txt
back_src/modules/movable/: CMakeLists.txt
back_src/modules/movable/player/: CMakeLists.txt  Player.cpp  Player.hpp
back_src/sdl_specific/: CMakeLists.txt
back_src/sdl_specific/Graphic/: CMakeLists.txt
back_src/sdl_specific/Input/: CMakeLists.txt  Input.hpp
libraries/: CMakeLists.txt
libraries/graphics_interface/: CMakeLists.txt
libraries/graphics_interface/include/GraphicsInterface/: Element_I.hpp  Graphics_I.hpp  Image_I.hpp  Sprite_I.hpp  Text_I.hpp  TileMap_I.hpp  Tile_I.hpp
libraries/input_event_interface/: CMakeLists.txt
libraries/input_event_interface/include/InputEventInterface/: InputEvent_I.hpp
libraries/logger/: CMakeLists.txt
libraries/logger/include/Logger/: Logger.hpp
libraries/logger/src/: Logger.cpp
libraries/sdl_graphics/: CMakeLists.txt
libraries/sdl_graphics/components/: CMakeLists.txt
libraries/sdl_graphics/components/element/: CMakeLists.txt
libraries/sdl_graphics/components/element/include/Element/: Element.hpp
libraries/sdl_graphics/components/element/src/: Element.cpp
libraries/sdl_graphics/components/image/: CMakeLists.txt
libraries/sdl_graphics/components/image/include/Image/: Image.hpp
libraries/sdl_graphics/components/image/src/: Image.cpp
libraries/sdl_graphics/components/renderer/: CMakeLists.txt
libraries/sdl_graphics/components/renderer/include/Renderer/: Renderer.hpp
libraries/sdl_graphics/components/renderer/src/: Renderer.cpp
libraries/sdl_graphics/components/sprite/: CMakeLists.txt
libraries/sdl_graphics/components/sprite/include/Sprite/: Sprite.hpp  Sprite2.hpp
libraries/sdl_graphics/components/sprite/src/: Sprite.cpp
libraries/sdl_graphics/components/surface/: CMakeLists.txt
libraries/sdl_graphics/components/surface/include/Surface/: Surface.hpp
libraries/sdl_graphics/components/surface/src/: Surface.cpp
libraries/sdl_graphics/components/text_renderer/: CMakeLists.txt
libraries/sdl_graphics/components/text_renderer/include/TextRenderer/: TextRenderer.hpp
libraries/sdl_graphics/components/text_renderer/src/: TextRenderer.cpp
libraries/sdl_graphics/components/texture/: CMakeLists.txt
libraries/sdl_graphics/components/texture/include/Texture/: Texture.hpp
libraries/sdl_graphics/components/texture/src/: Texture.cpp
libraries/sdl_graphics/components/tile/: CMakeLists.txt
libraries/sdl_graphics/components/tile/include/Tile/: Tile.hpp
libraries/sdl_graphics/components/tile/src/: Tile.cpp
libraries/sdl_graphics/components/tile_map/: CMakeLists.txt
libraries/sdl_graphics/components/tile_map/include/TileMap/: TileMap.hpp
libraries/sdl_graphics/components/tile_map/src/: TileMap.cpp
libraries/sdl_graphics/components/window/: CMakeLists.txt
libraries/sdl_graphics/components/window/include/Window/: Types.hpp  Window.hpp
libraries/sdl_graphics/components/window/src/: Window.cpp
libraries/sdl_graphics/include/SdlGraphics/: Graphics_I.hpp  SdlElement_I.hpp  SdlGraphics.hpp  SdlImage_I.hpp
libraries/sdl_graphics/src/: SdlGraphics.cpp
libraries/sdl_input_event/: CMakeLists.txt
libraries/sdl_input_event/include/SdlInputEvent/: SdlInputEvent.hpp
libraries/sdl_input_event/src/: SdlInputEvent.cpp
libraries/sfml_lib/: CMakeLists.txt
src/: BoxHead.hpp  CMakeLists.txt
src/components/: CMakeLists.txt
src/components/drawable/: CMakeLists.txt
src/components/drawable/include/Drawable/: Drawable.hpp
src/components/drawable/src/: Drawable.cpp
src/components/movable/: CMakeLists.txt
src/components/movable/include/Movable/: Movable.hpp  Movable_I.hpp
src/components/movable/src/: Movable.cpp
src/components/movable/test/: MovableTest.cpp
src/components/player/: CMakeLists.txt
src/components/player/include/Player/: Player.hpp  PlayerSheet_I.hpp  Player_I.hpp
src/components/player/src/: Player.cpp
src/components/player/test/: PlayerTest.cpp
src/components/sprite/: CMakeLists.txt
src/components/sprite/include/Sprite/: Sprite.hpp  Sprite_I.hpp
src/components/sprite/src/: Sprite.cpp
src/del_me_graphics/: CMakeLists.txt
src/del_me_graphics/src/: Drawable.cpp
src/game_engine/: CMakeLists.txt
src/game_engine/include/GameEngine/: GameEngine.hpp
src/game_engine/include/GameEngine/internal/: Factory.hpp  Settings.hpp
src/game_engine/src/: Factory.cpp  GameEngine.cpp
src/game_engine/test/: GameEngineTest.cpp
src/global/interfaces/: IDrawable.hpp
src/graphics/: CMakeLists.txt
src/graphics/include/Graphics/: Drawable.hpp  Drawable_I.hpp  Graphics_I.hpp
src/graphics/src/: Drawable.cpp
src/input_event/include/InputEvent/: InputEvent_I.hpp
src/modules/movable/: Movable.cpp  Movable.hpp
src/sdl_specific/Graphic/: Graphic.cpp  Graphic.hpp
src/sdl_specific/Input/: Input.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  basic.cpp  main.cpp
test/Movable/: CMakeLists.txt  MovableTest.cpp
test/Player/: CMakeLists.txt  PlayerTest.cpp
test/components/player/: PlayerTest.cpp
tools/: CMakeLists.txt  main.cpp
